--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 	</div>
   <div class="nav">
 		<a routerLink="create-document">Create</a>
-		<a routerLink="list-of-document">List</a>
+		<a routerLink="list-of-document">Files</a>
 	</div>
 <!-- main section -->
   
