--- a/src/app/create-document/create-document.component.css
+++ b/src/app/create-document/create-document.component.css
@@ -2,10 +2,22 @@
 	width: 100%;
 	height: 80vh;
 	display: flex;
-	justify-content: center;
+	/* justify-content: center; */
 	/* align-items: center; */
+	padding:0 90px;
+}
+.img{
+	width: 50%;
+	height: 70vh;
+}
+.img img{
+	width: 100%;
+	height: 100%;
+	padding: 0 10px;
 }
 form{
+	margin-top: 60px;
+	margin-left: 30px;
 	width: 40%;
 	height: 56vh;
 	background-color:rgba(121, 166, 244,0.9);
@@ -18,8 +30,8 @@ label{
 	margin: 10px 0;
 }
 .nextBtn{
-	margin-top: 20px;
-	margin-left: 500px;
+	margin-top: 10px;
+	margin-left: 370px;
 	padding: 10px;
 	width: 90px;
 	letter-spacing: 1px;
