--- a/src/app/list-of-document/list-of-document.component.html
+++ b/src/app/list-of-document/list-of-document.component.html
@@ -3,6 +3,9 @@
 
 <div class="list-section">
 	<div class="list-container">
+		<div class="img">
+			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Open_Clipart_Library_logo.svg/2560px-Open_Clipart_Library_logo.svg.png">
+		</div>
 		<div *ngFor="let list of docPrint">		 
 			<div class="list-item">
             <div class="list-head-flex">
