--- a/src/app/upload-document/upload-document.component.html
+++ b/src/app/upload-document/upload-document.component.html
@@ -1,12 +1,19 @@
 <div class="upload-section">
- <div class="upload-section-container">
-	<form>
-		<label>Upload document</label>
-		<input type="file" class="form-control"> 
-	</form>
-  <div class="buttn">
-		<p routerLink="/list-of-document"><i class="fa-solid fa-arrow-up-from-bracket"></i> Upload</p>
+ 
+	<div class="img">
+		<img src="https://images.all-free-download.com/images/graphiclarge/computing_work_conceptual_background_modern_3d_digital_elements_6853108.jpg">
 	</div>
+
+
+ <div class="upload-section-container">
+	  <form>
+		 <label>Upload document</label>
+		 <input type="file" class="form-control"> 
+	  </form>
+    <div class="buttn">
+		 <p routerLink="/list-of-document"><i class="fa-solid fa-arrow-up-from-bracket"></i> Upload</p>
+	  </div>
+  
 	
   <div class="download-view-container">
 
@@ -20,4 +27,6 @@
 
   </div>
  </div>
+
+
 </div>
