--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,43 +3,44 @@
 	padding: 0;
 	box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+	/* overflow: hidden; */
 }
 .main{
 	width: 100%;
 	height: 100vh;
 }
 .nav{
-	height: 10vh;
-	padding: 0 30px;
-	margin-left: 70px;
+	height: 6vh;
+	padding: 0px 8px;
+	/* margin-top: 10px; */
+	margin-left: 83px;
+	margin-right: 80px;
+	border-top: 2px solid #0b406e;
 }
 .nav a{
 	margin: 3px 10px;
 	padding: 5px 0;
+	font-size: 1.1rem;
 	text-decoration: none;
 	color: black;
+
 }
 .nav a:hover{
 	color: #7952b3;
 }
 .head-container{
-	background-color: #0b406e;
-	padding: 10px;
+	border-top: 5px solid #0b406e ;
+	/* background-color: #0b406e; */
+	padding: 10px 100px;
 	height: 10vh;
 	display: flex;
-	justify-content: center;
+	
+	align-items: center;
 }
 .sub-container{
-	width: 80%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: white;
+	color: black;
 }
 .sub-container h1{
 	font-size: 1.5rem;
 	cursor: pointer;
-}
-.fa-folders{
-	color: black;
 }
