--- a/src/app/create-document/create-document.component.html
+++ b/src/app/create-document/create-document.component.html
@@ -1,5 +1,8 @@
 
 <div class="docForm">
+	<div class="img">
+		<img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80">
+	</div>
 	<form>
 		
 		<div class="form-group mb3">
