--- a/src/app/list-of-document/list-of-document.component.css
+++ b/src/app/list-of-document/list-of-document.component.css
@@ -1,6 +1,18 @@
+.img{
+	width: 200px;
+	height: 20vh;
+	margin-right:70px;
+	margin-top: 10px;
+	padding: 0 0 0 20px;
+}
+.img img{
+  width: 100%;
+	height: 100%;
+}
+
 .list-section{
 	width: 100%;
-	height: 80vh;
+	height: auto;
 }
 .list-container{
 	width: 100%;
@@ -12,13 +24,15 @@
 .list-item{
 	width: 270px;
 	height: 200px;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	padding: 10px;
 	border-radius: 10px;
-	margin: 10px;
+	margin: 14px 10px 10px 10px;
 	word-break: break-all;
 	/* overflow: scroll; */
 	scroll-behavior: smooth;
+	background-color: rgba(146, 144, 140,0.1);
+	box-shadow: 1px 1px 3px;
 }
 .list-head-flex{
 	width: 100%;
