--- a/src/app/upload-document/upload-document.component.css
+++ b/src/app/upload-document/upload-document.component.css
@@ -2,20 +2,30 @@
 	width: 100%;
 	height: 80vh;
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	/* align-items: center; */
 	background-color: white;
+	padding: 0 0 0 50px;
 }
 .upload-section-container{
 	width: 40%;
-	height: 56vh;
-	background-color:rgba(121, 166, 244,0.9);
+	height: 50vh;
+	/* background-color:rgba(121, 166, 244,0.9); */
+	border-left: 2px solid rgba(121, 166, 244,0.9);
 	display: flex;
 	flex-direction: column; 
-	align-items: center;
-	justify-content: center; 
-	border-radius: 20px;
-	padding: 10px 30px;
+	padding: 10px 50px;
+	margin-top: 80px;
+}
+.img{
+	width: 50%;
+	height: 66vh;
+}
+.img img{
+	width: 100%;
+	height: 100%;
+	margin-top: 10px;
+	border-radius:0 90px 40px 0;
 }
 form{
 	width: 60%;
@@ -23,7 +33,6 @@ form{
 	/* background-color: beige; */
 	display: flex;
 	flex-direction: column;
-	align-content:center;
 }
 form label{
 	font-weight: 600;
@@ -35,9 +44,9 @@ form label{
 	height: 20%;
 	/* background-color: aquamarine; */
 	display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   align-items: center;
-	margin-top: 60px;
+	margin-top: 40px;
 }
 .download{
   border: 1px solid blue;
@@ -69,6 +78,7 @@ form label{
 	border-radius: 20px;
 	cursor: pointer;
 	padding: 3px;
+	margin-left: 18px;
 }
 .view:hover{
 	background-color:lightgray;
